syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.acme";
option java_outer_classname = "HelloGrpcProto";

package hello;

service ManagementGrpc {
    rpc GetListOfUser (HelloRequest) returns (UserReply) {}
    rpc ApproveListOfUser (ApproveOrDisapproveUserDto) returns (UserReply) {}
    rpc EnableOrDisableUser (EnableOrDisableDto) returns (UserReply) {}
}

message HelloRequest {
}

message UserReply {
    repeated DashBoardDTO response = 1;
}
message DashBoardDTO {
    uint64 userId = 1;
    string ApprovedOrNot = 2;
    string DisabledOrEnabled = 3;
    string Username = 4;
}
message EnableOrDisableDto {
    uint64 userId = 1;
    string DisabledOrEnabled = 2;
}
message ApproveOrDisapproveUserDto {
    uint64 userId = 1;
    string ApprovedOrNot = 2;
}